# reprocess_irods_upload

./: .gitmodules  README.md  count.ipynb  metadata.ipynb  qc.ipynb  transfer_with_meta.bsub
metadata/: ERS3498059.tsv  ERS3498060.tsv  ERS3498061.tsv  ERS3498062.tsv  ERS3498063.tsv  ERS3498064.tsv  ERS3498065.tsv  ERS3498066.tsv  ERS3498067.tsv  ERS3498068.tsv  ERS3498069.tsv  ERS3498070.tsv  ERS3498071.tsv  ERS3498072.tsv  ERS3498073.tsv  ERS3498074.tsv  ERS3498075.tsv  ERS3498076.tsv  ERS3498077.tsv  ERS3498078.tsv  ERS3498079.tsv  ERS3498080.tsv  ERS3498081.tsv  ERS3498082.tsv  SRS4066893.tsv
notebooks/: reprocessing_stats.ipynb  track_reprocessing.ipynb
results/: 0_current_validation.csv  0_current_validation.txt  0_current_validation_filt.txt  0_success_validation.csv  0_success_validation.txt  GSE123994_tracking.txt  count_files.txt  count_table.txt  main_dir_validation.csv  main_dir_validation.txt  ok_datasets.json  qc.tsv
scripts/: add_meta.sh  checksum.sh  cleanup_passed_failed.sh  count_success_logs.sh  create_table.sql  delete_duplicated.sh  delete_wastes.sh  download_metadata.sh  filter_failed.sh  get_counts.sh  get_metadata.py  get_qc_files.sh  get_successful_samples.py  (+20 more)
tracking/: pyproject.toml  schema.yml
tracking/scripts/: validate_irods_schema.py
tracking/src/tracking/: cli.py  config.py  irods.py
tracking/src/tracking/io/: __init__.py  readers.py
tracking/src/tracking/models/: __init__.py  samples.py
tracking/src/tracking/queries/: __init__.py  crud.py  session.py  utils.py
tracking/src/tracking/update/: __init__.py  samples.py
(+3 files in other folders)
