[project]
name = "tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "psycopg2>=2.9.10",
    "pydantic>=2.12.4",
    "python-dotenv>=1.1.1",
    "python-irodsclient>=3.2.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
sample-tracking = "tracking.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
